handle received message
