# docs/api/api.yaml
@@ -174,6 +174,10 @@ components:
         deviceId:
           type: string
           nullable: true
+        received:
+          type: string
+          format: date-time
+          nullable: true
 
     SearchConversationRequest:
       type: object
