# src/main/kotlin/com/wutsi/platform/chat/dto/Message.kt
@@ -15,5 +15,7 @@ public data class Message(
     public val timestamp: Long = 0,
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
     public val created: OffsetDateTime = OffsetDateTime.now(),
-    public val deviceId: String? = null
+    public val deviceId: String? = null,
+    @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
+    public val received: OffsetDateTime? = null
 )
